Alterações da manhã

--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/estilo.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/estilo.scss
@@ -5,6 +5,7 @@
 @import 'base/_fonts';
 
 @import 'layout/_cabecalho';
+@import 'layout/_container';
 
 @import 'components/_alinhamento-texto';
 @import 'components/_depoimentos';
