--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/estilo.css
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/estilo.css
@@ -361,7 +361,7 @@ template {
   margin: 0 -15px; }
 
 .container {
-  width: 1200px; }
+  max-width: 1200px; }
 
 .text-center {
   text-align: center; }
