Inserção do container

--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_rodape.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_rodape.scss
@@ -11,6 +11,7 @@
     padding: 15px 25px;
     background-image: url(imagens/img/rodape-bg.jpg);
     background-size: cover;
+    
 
 }
 
@@ -96,4 +97,8 @@ img {
     margin-left: 15px;
     border-left: 1px solid #000;
     padding-left: 15px;
+}
+
+.margem_mapa{
+    margin-top: 25px;
 }
