--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/estilo.css
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/estilo.css
@@ -361,7 +361,8 @@ template {
   margin: 0 -15px; }
 
 .container {
-  max-width: 1200px; }
+  max-width: 1200px;
+  margin: 0 auto; }
 
 .text-center {
   text-align: center; }
@@ -403,8 +404,7 @@ template {
   margin-left: -15px;
   margin-right: -15px;
   padding: 40px 15px 40px 15px;
-  box-shadow: 0px 3px 10px #000;
-  max-width: 1000px; }
+  box-shadow: 0px 3px 10px #000; }
 
 .formulario_campo {
   width: 100%;
@@ -603,6 +603,9 @@ img {
   margin-left: 15px;
   border-left: 1px solid #000;
   padding-left: 15px; }
+
+.margem_mapa {
+  margin-top: 25px; }
 
 .servico {
   padding: 30px 0px; }
