--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/layout/_container.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/layout/_container.scss
@@ -1,4 +1,35 @@
-.container{
-    max-width: 1200px;
+.container {
+    // max-width: 1200px;
     margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    // border: 1px solid red;
+
+}
+
+
+@media (min-width: $breakpoint-sm) {
+    .container {
+        width: 540px;
+        //border: 1px solid red;
+    }
+}
+
+@media (min-width: $breakpoint-md) {
+    .container {
+        width: 720px;
+        //border: 1px solid blue;
+    }
+}
+
+@media (min-width: $breakpoint-lg) {
+    .container {
+        width: 960px;
+    }
+}
+
+@media (min-width:$breakpoint-xl) {
+    .container {
+        width: 1140px;
+    }
 }
