--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/pages/_pagina-inicial.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/pages/_pagina-inicial.scss
@@ -1,28 +1,30 @@
 .cabecalho-home {
     background: url(imagens/img/cabecalho-home-bg.jpg);
-    background-attachment: fixed;
-   //background: url(../../imagens/img/cabecalho-home-bg.jpg);
+    //background-attachment: fixed;
+    //background: url(../../imagens/img/cabecalho-home-bg.jpg);
     background-size: cover;
     color: #fff;
     text-align: center;
     padding: 50px 0px;
 
 
-&__titulo {
-    font-size: 30px;
-    margin-bottom: 0;
-}
-&__subtitulo{
-    display: block;
-    font-size: 15px;
-    padding: 5px;
-    max-width: 80%;
-    margin: auto;
-}
 
-&__role {
-    display: none;
-}
+    &__titulo {
+        font-size: 30px;
+        margin-bottom: 0;
+    }
+
+    &__subtitulo {
+        display: block;
+        font-size: 15px;
+        padding: 5px;
+        max-width: 80%;
+        margin: auto;
+    }
+
+    &__role {
+        display: none;
+    }
 }
 
 .home__titulo {
@@ -30,17 +32,24 @@
     text-transform: uppercase;
     margin-bottom: 50px;
 
-&__titulo::after {
-    content: '';
-    display: block;
-    width: 50px;
-    height: 3px;
-    background-color:$cor-principal;
-    margin: 0 auto;
-    margin-top: 15px;
+    &__titulo::after {
+        content: '';
+        display: block;
+        width: 50px;
+        height: 3px;
+        background-color: $cor-principal;
+        margin: 0 auto;
+        margin-top: 15px;
+    }
+
+    &__titulo--branco::after {
+        background-color: #fff;
+    }
 }
 
-&__titulo--branco::after {
-    background-color: #fff;
-}
+@media(min-width:$breakpoint-lg) {
+    .cabecalho-home {
+        //border: 1px solid red;
+        height: 100vh;
+    }
 }
