Varias edições da aula

--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/layout/_container.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/layout/_container.scss
@@ -3,6 +3,7 @@
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
+    overflow: auto;
     // border: 1px solid red;
 
     @media (min-width: $breakpoint-sm) {
