--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/base/_meu-reset.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/base/_meu-reset.scss
@@ -1,5 +1,6 @@
 *{
     box-sizing: border-box;
+   
 }
 
 img{
@@ -10,10 +11,11 @@ img{
 body{
     font-family: "Source Sans Pro";
     overflow-x: hidden;
-    padding: 2x 10px;
+    padding: 0px 15px;
+    position: relative;
 }
 header{
-    padding: 4px 7px;
+    padding: 4px 7px 0px 7px;
 }
 
 footer{
