--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_servicos.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_servicos.scss
@@ -1,10 +1,25 @@
 .servico {
     padding: 30px 0px;
+
+    @media (min-width: $breakpoint-lg) {
+        width: 960px;    
+        overflow: auto;
+       
+    }
+    
 }
+
 
 .servico__item {
     text-align: center;
     padding: 0px 15px;
+    
+    @media (min-width: $breakpoint-lg) {
+        width: 960px;    
+        float: left;        
+        width: 33.333%;
+       
+    }
 }
 
 .servicos__texto {
