--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_servicos.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_servicos.scss
@@ -1,8 +1,8 @@
 .servico {
     padding: 30px 0px;
 
-    @media (min-width: $breakpoint-lg) {
-        width: 960px;    
+    @media (min-width: $breakpoint-md) {
+         
         overflow: auto;
        
     }
@@ -14,8 +14,8 @@
     text-align: center;
     padding: 0px 15px;
     
-    @media (min-width: $breakpoint-lg) {
-        width: 960px;    
+    @media (min-width: $breakpoint-md) {
+            
         float: left;        
         width: 33.333%;
        
@@ -26,3 +26,4 @@
     color:$cor-leitura;
     line-height: 21px;
 }
+
