--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_menu-principal.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_menu-principal.scss
@@ -16,6 +16,10 @@
     position: absolute;
     top: 15px;
     right: 15px;
+
+    @media(min-width: $breakpoint-md) {
+        display: none;
+    }
 }
 
 .menu-principal__btn--fechar {
@@ -29,6 +33,7 @@
     @media(min-width: $breakpoint-md) {
         li {
             display: inline-block;
+            margin: 0px 10px;
         }
     }
 }
