--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_menu-principal.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_menu-principal.scss
@@ -20,11 +20,18 @@
     @media(min-width: $breakpoint-md) {
         display: none;
     }
+    
 }
 
-.menu-principal__btn--fechar {
-    background-position: -50px 7px;
+@media(max-width: $breakpoint-md){
+    .fechado{
+            background-position: -50px 7px;
+    }
 }
+
+/*.menu-principal__btn--fechar {
+    background-position: -50px 7px;
+}*/
 
 .menu-principal__lista {
     margin-left: 15px;
@@ -58,6 +65,4 @@
 
 .menu-principal__item--atual {
     color: $cor-principal;
-
-
 }
