--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/layout/_cabecalho.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/layout/_cabecalho.scss
@@ -4,4 +4,19 @@
     position: fixed;
     width: 100%;
 
+    @media(min-width:$breakpoint-md){
+        min-height: 100px;
+        box-sizing: border-box;
+    .logo{
+        float: left;
+        margin-bottom: 0px;        
+        margin-top: 20px;
+        
+    }
+    .menu-principal__lista{
+        float: right;
+        margin-bottom: 0px;
+        margin-top: 35px;
+    }
+}
 }
