--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/pages/_pagina-inicial.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/pages/_pagina-inicial.scss
@@ -36,7 +36,7 @@
     text-transform: uppercase;
     margin-bottom: 55px;
 
-    &__titulo::after {
+    &::after {
         content: '';
         display: block;
         width: 50px;
@@ -51,12 +51,3 @@
     }
 }
 
-.home__titulo::after {
-    content: '';
-    display: block;
-    width: 50px;
-    height: 3px;
-    background-color: $cor-principal;
-    margin: 0px auto;
-    margin-top: 15px;
-}
