--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/layout/_cabecalho.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/layout/_cabecalho.scss
@@ -4,19 +4,26 @@
     position: fixed;
     width: 100%;
 
-    @media(min-width:$breakpoint-md){
+    @media(min-width:$breakpoint-md) {
         min-height: 100px;
         box-sizing: border-box;
-    .logo{
-        float: left;
-        margin-bottom: 0px;        
-        margin-top: 20px;
-        
+
+        .logo {
+            float: left;
+            margin-bottom: 0px;
+            margin-top: 20px;
+        }
+
+        .menu-principal__lista {
+            float: right;
+            margin-bottom: 0px;
+            margin-top: 35px;
+        }
     }
-    .menu-principal__lista{
-        float: right;
-        margin-bottom: 0px;
-        margin-top: 35px;
+
+    @media(max-width: $breakpoint-md) {
+        .logo {
+            margin-top: 10px;
+        }
     }
-}
 }
