--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/estilo.css
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/estilo.css
@@ -410,6 +410,10 @@ template {
   width: 100%;
 }
 
+.cabecalho-home {
+  padding: 150px;
+}
+
 @media (min-width: 768px) {
   .cabecalho {
     min-height: 100px;
@@ -428,9 +432,9 @@ template {
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .cabecalho .logo {
-    margin-top: 10px;
+    margin-top: 18px;
   }
 }
 
@@ -584,7 +588,7 @@ template {
   border-radius: 5px;
   background-image: url(img/menuprincipal-btn-bg.png);
   background-repeat: no-repeat;
-  background-position: 5px 5px;
+  background-position: -47px 7px;
   cursor: pointer;
   position: absolute;
   top: 15px;
@@ -597,9 +601,6 @@ template {
   }
 }
 
-/*.menu-principal__btn--fechar {
-    background-position: -50px 7px;
-}*/
 .menu-principal__lista {
   margin-left: 15px;
   padding: 0%;
@@ -629,18 +630,16 @@ template {
   color: #f44242;
 }
 
-@media (max-width: 768px) {
-  .fechado {
-    background-position: -47px 7px;
-  }
-  .fechado .menu-principal__btn {
+@media (max-width: 768px -1) {
+  .menu-principal--fechado .menu-principal__btn {
     margin: 0;
+    background-position: 5px 5px;
   }
-  .fechado .menu-principal__lista {
+  .menu-principal--fechado .menu-principal__lista {
     margin: 0;
     height: 5px;
   }
-  .fechado .menu-principal__item {
+  .menu-principal--fechado .menu-principal__item {
     margin: 0;
     height: 0;
     overflow: hidden;
@@ -650,8 +649,8 @@ template {
 .pagina-cabecalho {
   color: white;
   background-color: #f44242;
-  background-image: url(../../img/cabecalho-pagina-bg.jpg);
-  padding-top: 40px;
+  background-image: url(imagens/img/cabecalho-pagina-bg.jpg);
+  padding-top: 130px;
   padding-bottom: 40px;
   background-attachment: fixed;
   margin-left: -15px;
@@ -824,6 +823,7 @@ img {
   color: #fff;
   text-align: center;
   padding: 50px 0px;
+  padding-top: 150px;
 }
 
 @media (min-width: 992px) {
