--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/layout/_cabecalho.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/layout/_cabecalho.scss
@@ -4,6 +4,10 @@
     position: fixed;
     width: 100%;
 
+    &-home {
+        padding: 150px;
+    }
+
     @media(min-width:$breakpoint-md) {
         min-height: 100px;
         box-sizing: border-box;
@@ -21,9 +25,9 @@
         }
     }
 
-    @media(max-width: $breakpoint-md) {
+    @media(min-width: $breakpoint-md) {
         .logo {
-            margin-top: 10px;
+            margin-top: 18px;
         }
     }
 }
