--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/pages/_pagina-inicial.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/pages/_pagina-inicial.scss
@@ -6,6 +6,7 @@
     color: #fff;
     text-align: center;
     padding: 50px 0px;
+    padding-top: 150px;
 
     @media(min-width:$breakpoint-lg) {
 
@@ -50,4 +51,3 @@
         background-color: #fff;
     }
 }
-
