--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/estilo.css
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/estilo.css
@@ -414,6 +414,12 @@ template {
   padding: 150px;
 }
 
+@media (max-width: 768px) {
+  .cabecalho {
+    height: 70px;
+  }
+}
+
 @media (min-width: 768px) {
   .cabecalho {
     min-height: 100px;
@@ -555,6 +561,12 @@ template {
   margin-left: 15px;
 }
 
+@media (max-width: 768px) {
+  .logo {
+    margin-top: 5px;
+  }
+}
+
 .logo--branco {
   background-image: url(imagens/img/logotipo-branco.png);
   margin-left: 0px;
@@ -630,9 +642,9 @@ template {
   color: #f44242;
 }
 
-@media (max-width: 768px -1) {
+@media (max-width: 767px) {
   .menu-principal--fechado .menu-principal__btn {
-    margin: 0;
+    margin-top: -4px;
     background-position: 5px 5px;
   }
   .menu-principal--fechado .menu-principal__lista {
