--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_menu-principal.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_menu-principal.scss
@@ -61,10 +61,11 @@
         color: $cor-principal;
     }
 
-    @media(max-width: $breakpoint-md -1) {
+    @media(max-width: $breakpoint-md - 1) {
         &--fechado {
             .menu-principal__btn {
-                margin: 0;
+
+                margin-top: -4px;
                 // background-position: -47px 7px;
                 background-position: 5px 5px;
 
