--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/layout/_cabecalho.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/layout/_cabecalho.scss
@@ -8,11 +8,13 @@
         padding: 150px;
     }
 
+    /*
     @media(max-width: $breakpoint-md) {
         & {
             height: 70px;
         }
     }
+    */
 
     @media(min-width:$breakpoint-md) {
         min-height: 100px;
