--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/estilo.css
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/estilo.css
@@ -408,16 +408,17 @@ template {
   margin: 0 -15px;
   position: fixed;
   width: 100%;
+  /*
+    @media(max-width: $breakpoint-md) {
+        & {
+            height: 70px;
+        }
+    }
+    */
 }
 
 .cabecalho-home {
   padding: 150px;
-}
-
-@media (max-width: 768px) {
-  .cabecalho {
-    height: 70px;
-  }
 }
 
 @media (min-width: 768px) {
@@ -614,8 +615,9 @@ template {
 }
 
 .menu-principal__lista {
-  margin-left: 15px;
   padding: 0%;
+  -webkit-transition: margin 300ms ease-out;
+  transition: margin 300ms ease-out;
 }
 
 @media (min-width: 768px) {
@@ -626,6 +628,7 @@ template {
 }
 
 .menu-principal__lista li {
+  margin-left: 15px;
   list-style: none;
 }
 
@@ -636,6 +639,8 @@ template {
   font-weight: bold;
   color: #343434;
   font-size: 18px;
+  -webkit-transition: all 300ms ease-out;
+  transition: all 300ms ease-out;
 }
 
 .menu-principal__item--atual {
@@ -644,12 +649,11 @@ template {
 
 @media (max-width: 767px) {
   .menu-principal--fechado .menu-principal__btn {
-    margin-top: -4px;
     background-position: 5px 5px;
   }
   .menu-principal--fechado .menu-principal__lista {
     margin: 0;
-    height: 5px;
+    height: 10px;
   }
   .menu-principal--fechado .menu-principal__item {
     margin: 0;
