--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/pages/_pagina-inicial.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/pages/_pagina-inicial.scss
@@ -8,9 +8,38 @@
     padding: 50px 0px;
     padding-top: 150px;
 
+    &__role {
+        display: none;
+    }
+
     @media(min-width:$breakpoint-lg) {
 
         height: 100vh;
+        background: url(imagens/img/cabecalho-home-bg-md.jpg);
+        background-size: cover;
+
+        &__role {
+            display: block;
+            width: 200px;
+            height: 70px;
+
+            color: #fff;
+            text-decoration: none;
+            position: absolute;
+            background: url(imagens/img/icone-mouse.png) no-repeat center right;
+            bottom: 50px;
+            left: 50%;
+            line-height: 70px;
+            margin-left: -115px;
+
+
+        }
+    }
+
+    @media(min-width: $breakpoint-xl) {
+        background-image: url(imagens/img/cabecalho-home-bg-xl.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
 
     }
 
@@ -27,9 +56,7 @@
         margin: auto;
     }
 
-    &__role {
-        display: none;
-    }
+
 }
 
 .home__titulo {
@@ -42,7 +69,7 @@
         display: block;
         width: 50px;
         height: 3px;
-        background-color: $cor-principal;
+        background-color: #fff;
         margin: 0px auto;
         margin-top: 15px;
     }
