--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_logo.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_logo.scss
@@ -7,9 +7,11 @@
     text-indent: -9999px;
     margin: 0;
     margin-left: 15px;
+    transition: all 400ms ease-out;
 
     @media(max-width: $breakpoint-md) {
         margin-top: 5px;
+       
     }
 }
 
