--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/layout/_cabecalho.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/layout/_cabecalho.scss
@@ -3,7 +3,7 @@
     margin: 0 -15px;
     position: fixed;
     width: 100%;
-
+  
     &-home {
         padding: 150px;
     }
@@ -25,6 +25,7 @@
             float: left;
             margin-bottom: 0px;
             margin-top: 20px;
+            transition: all 400ms ease-out;
         }
 
         .menu-principal__lista {
@@ -37,13 +38,12 @@
     @media(min-width: $breakpoint-md) {
         .logo {
             margin-top: 18px;
+            transition: all 400ms ease-out;
         }
     }
 }
 
-#servicos {
-    scroll-behavior: smooth;
-}
+
 
 /*
 html {
