--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/layout/_container.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/layout/_container.scss
@@ -4,6 +4,7 @@
     padding-left: 15px;
     padding-right: 15px;
     overflow: auto;
+    transition: all 400ms ease-out;
     // border: 1px solid red;
 
     @media (min-width: $breakpoint-sm) {
