--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/estilo.css
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/estilo.css
@@ -1,5 +1,6 @@
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 img {
@@ -67,7 +68,8 @@ h1 {
    * 2. Show the overflow in Edge and IE.
    */
 hr {
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   /* 1 */
   height: 0;
   /* 1 */
@@ -104,7 +106,8 @@ abbr[title] {
   /* 1 */
   text-decoration: underline;
   /* 2 */
-  text-decoration: underline dotted;
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
   /* 2 */
 }
 
@@ -210,9 +213,9 @@ select {
    * Correct the inability to style clickable types in iOS and Safari.
    */
 button,
-[type=button],
-[type=reset],
-[type=submit] {
+[type="button"],
+[type="reset"],
+[type="submit"] {
   -webkit-appearance: button;
 }
 
@@ -220,9 +223,9 @@ button,
    * Remove the inner border and padding in Firefox.
    */
 button::-moz-focus-inner,
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner {
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -231,9 +234,9 @@ button::-moz-focus-inner,
    * Restore the focus styles unset by the previous rule.
    */
 button:-moz-focusring,
-[type=button]:-moz-focusring,
-[type=reset]:-moz-focusring,
-[type=submit]:-moz-focusring {
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -251,7 +254,8 @@ fieldset {
    *    `fieldset` elements in all browsers.
    */
 legend {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   color: inherit;
   /* 2 */
@@ -283,9 +287,10 @@ textarea {
    * 1. Add the correct box sizing in IE 10.
    * 2. Remove the padding in IE 10.
    */
-[type=checkbox],
-[type=radio] {
-  box-sizing: border-box;
+[type="checkbox"],
+[type="radio"] {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */
@@ -294,8 +299,8 @@ textarea {
 /**
    * Correct the cursor style of increment and decrement buttons in Chrome.
    */
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -303,7 +308,7 @@ textarea {
    * 1. Correct the odd appearance in Chrome and Safari.
    * 2. Correct the outline style in Safari.
    */
-[type=search] {
+[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
@@ -313,7 +318,7 @@ textarea {
 /**
    * Remove the inner padding in Chrome and Safari on macOS.
    */
-[type=search]::-webkit-search-decoration {
+[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -370,7 +375,7 @@ template {
 @font-face {
     font-family: "Source Sans Pro";
     src: url(../../source-sans-pro/SourceSansPro-Regular.otf);
-
+  
     font-weight: bold;
 }
 
@@ -385,41 +390,48 @@ template {
   font-family: "Source Sans Pro";
   src: url("source-sans-pro/source-sans-pro/SourceSansPro-Regular.otf");
 }
+
 @font-face {
   font-family: "Source Sans Pro";
   src: url("source-sans-pro/source-sans-pro/SourceSansPro-Regular.otf");
   font-weight: bold;
 }
+
 @font-face {
   font-family: "Source Sans Pro";
   src: url("source-sans-pro/source-sans-pro/SourceSansPro-BoldIt.otf");
   font-style: italic;
 }
+
 .cabecalho {
   background: #edeff1;
   margin: 0 -15px;
   position: fixed;
   width: 100%;
   /*
-  @media(max-width: $breakpoint-md) {
-      & {
-          height: 70px;
-      }
-  }
-  */
+    @media(max-width: $breakpoint-md) {
+        & {
+            height: 70px;
+        }
+    }
+    */
 }
+
 .cabecalho-home {
   padding: 150px;
 }
+
 @media (min-width: 768px) {
   .cabecalho {
     min-height: 100px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
   }
   .cabecalho .logo {
     float: left;
     margin-bottom: 0px;
     margin-top: 20px;
+    -webkit-transition: all 400ms ease-out;
     transition: all 400ms ease-out;
   }
   .cabecalho .menu-principal__lista {
@@ -428,9 +440,11 @@ template {
     margin-top: 35px;
   }
 }
+
 @media (min-width: 768px) {
   .cabecalho .logo {
     margin-top: 18px;
+    -webkit-transition: all 400ms ease-out;
     transition: all 400ms ease-out;
   }
 }
@@ -446,23 +460,28 @@ html {
   padding-left: 15px;
   padding-right: 15px;
   overflow: auto;
+  -webkit-transition: all 400ms ease-out;
   transition: all 400ms ease-out;
 }
+
 @media (min-width: 576px) {
   .container {
     width: 540px;
   }
 }
+
 @media (min-width: 768px) {
   .container {
     width: 720px;
   }
 }
+
 @media (min-width: 992px) {
   .container {
     width: 960px;
   }
 }
+
 @media (min-width: 1200px) {
   .container {
     width: 1140px;
@@ -480,28 +499,55 @@ html {
   color: #fff;
   padding: 30px 0;
 }
+
 .depoimentos__item {
   padding: 0px 15px;
 }
+
 .depoimentos__img {
   display: block;
   margin: 0 auto;
-  box-shadow: 2px 2px 0 black;
+  -webkit-box-shadow: 2px 2px 0 black;
+          box-shadow: 2px 2px 0 black;
   margin-bottom: 30px;
 }
+
+@media (min-width: 768px) {
+  .depoimentos__img {
+    float: left;
+    margin-right: 15px;
+  }
+}
+
 .depoimentos__pessoa {
   text-align: center;
   font-weight: bold;
   font-style: italic;
 }
+
+@media (min-width: 768px) {
+  .depoimentos__pessoa {
+    float: left;
+    margin-right: 15px;
+  }
+}
+
+.depoimentos__pessoa::before {
+  content: "";
+  border-left: 2.2px solid #fff;
+  color: #fff;
+  margin-right: 5px;
+}
+
 .depoimentos__texto {
   line-height: 23px;
   padding: 0px 8px;
 }
+
 .depoimentos__texto::before {
   background-image: url(imagens/img/aspas.png);
   background-repeat: no-repeat;
-  content: "";
+  content: '';
   display: inline-block;
   width: 25px;
   height: 23px;
@@ -517,7 +563,8 @@ html {
   margin-left: -15px;
   margin-right: -15px;
   padding: 40px 15px 40px 15px;
-  box-shadow: 0px 3px 10px #000;
+  -webkit-box-shadow: 0px 3px 10px #000;
+          box-shadow: 0px 3px 10px #000;
 }
 
 .formulario_campo {
@@ -546,8 +593,10 @@ html {
   text-indent: -9999px;
   margin: 0;
   margin-left: 15px;
+  -webkit-transition: all 400ms ease-out;
   transition: all 400ms ease-out;
 }
+
 @media (max-width: 768px) {
   .logo {
     margin-top: 5px;
@@ -593,25 +642,31 @@ html {
   top: 15px;
   right: 15px;
 }
+
 @media (min-width: 768px) {
   .menu-principal__btn {
     display: none;
   }
 }
+
 .menu-principal__lista {
   padding: 0%;
+  -webkit-transition: margin 300ms ease-out;
   transition: margin 300ms ease-out;
 }
+
 @media (min-width: 768px) {
   .menu-principal__lista li {
     display: inline-block;
     margin: 0px 10px;
   }
 }
+
 .menu-principal__lista li {
   margin-left: 15px;
   list-style: none;
 }
+
 .menu-principal__item {
   margin-bottom: 20px;
   display: block;
@@ -619,11 +674,14 @@ html {
   font-weight: bold;
   color: #343434;
   font-size: 18px;
+  -webkit-transition: all 300ms ease-out;
   transition: all 300ms ease-out;
 }
+
 .menu-principal__item--atual {
   color: #f44242;
 }
+
 @media (max-width: 767px) {
   .menu-principal--fechado .menu-principal__btn {
     background-position: 5px 5px;
@@ -731,7 +789,7 @@ html {
 }
 
 .lista_item::before {
-  content: ">";
+  content: '>';
   margin-right: 8px;
   color: #f44242;
 }
@@ -786,6 +844,7 @@ img {
 .servico {
   padding: 30px 0px;
 }
+
 @media (min-width: 768px) {
   .servico {
     overflow: auto;
@@ -796,6 +855,7 @@ img {
   text-align: center;
   padding: 0px 15px;
 }
+
 @media (min-width: 768px) {
   .servico__item {
     float: left;
@@ -808,6 +868,11 @@ img {
   line-height: 21px;
 }
 
+.titulo__servicos {
+  font-weight: bold;
+  font-weight: 900;
+}
+
 .cabecalho-home {
   background: url(imagens/img/cabecalho-home-bg.jpg);
   background-size: cover;
@@ -816,20 +881,25 @@ img {
   padding: 50px 0px;
   padding-top: 150px;
 }
+
 .cabecalho-home__role {
   display: none;
 }
+
 .cabecalho-home__titulo {
   font-size: 30px;
   margin-bottom: 0;
 }
+
 .cabecalho-home__subtitulo {
   display: block;
   font-size: 15px;
   padding: 5px;
   max-width: 80%;
   margin: auto;
+  margin-top: 10px;
 }
+
 @media (min-width: 992px) {
   .cabecalho-home {
     height: 100vh;
@@ -839,9 +909,11 @@ img {
   .cabecalho-home__titulo {
     font-size: 60px;
     margin-bottom: 0;
+    margin-top: 300px;
   }
   .cabecalho-home__subtitulo {
     font-size: 22px;
+    margin-top: 25px;
   }
   .cabecalho-home__role {
     display: block;
@@ -857,6 +929,7 @@ img {
     margin-left: -115px;
   }
 }
+
 @media (min-width: 1200px) {
   .cabecalho-home {
     background-image: url(imagens/img/cabecalho-home-bg-xl.jpg);
@@ -870,8 +943,9 @@ img {
   text-transform: uppercase;
   margin-bottom: 55px;
 }
+
 .home__titulo::after {
-  content: "";
+  content: '';
   display: block;
   width: 50px;
   height: 3px;
@@ -879,6 +953,7 @@ img {
   margin: 0px auto;
   margin-top: 15px;
 }
+
 .home__titulo--branco::after {
   background-color: #fff;
 }
@@ -905,3 +980,4 @@ img {
   border-left: 1px solid #000;
   padding-left: 15px;
 }
+/*# sourceMappingURL=estilo.css.map */
