--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_depoimentos.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_depoimentos.scss
@@ -6,36 +6,63 @@
     padding: 30px 0;
 
 
-&__item {
-    padding: 0px 15px;
-}
+    &__item {
+        padding: 0px 15px;
 
-&__img {
-    display: block;
-    margin: 0 auto;
-    box-shadow: 2px 2px 0 black;
-    margin-bottom: 30px;
-}
 
-&__pessoa {
-    text-align: center;
-    font-weight: bold;
-    font-style: italic;
-}
+    }
 
-&__texto {
-    line-height: 23px;
-    padding: 0px 8px;
-}
 
-&__texto::before {
-    background-image: url(imagens/img/aspas.png);
-    background-repeat: no-repeat;
-    content: '';
-    display: inline-block;
-    width: 25px;
-    height: 23px;
-    margin-right: 5px;
 
-}
+    &__img {
+        display: block;
+        margin: 0 auto;
+        box-shadow: 2px 2px 0 black;
+        margin-bottom: 30px;
+
+        @media(min-width: $breakpoint-md) {
+            float: left;
+            margin-right: 15px;
+        }
+    }
+
+    &__pessoa {
+        text-align: center;
+        font-weight: bold;
+        font-style: italic;
+
+        @media(min-width: $breakpoint-md) {
+            float: left;
+            margin-right: 15px;
+        }
+
+        &::before {
+            content: "";
+            border-left: 2.2px solid #fff;
+            color: #fff;
+            margin-right: 5px;
+
+        }
+    }
+
+
+
+    &__texto {
+        line-height: 23px;
+        padding: 0px 8px;
+    }
+
+    &__texto::before {
+        background-image: url(imagens/img/aspas.png);
+        background-repeat: no-repeat;
+        content: '';
+        display: inline-block;
+        width: 25px;
+        height: 23px;
+        margin-right: 5px;
+
+    }
+
+
+
 }
