--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_servicos.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_servicos.scss
@@ -2,28 +2,33 @@
     padding: 30px 0px;
 
     @media (min-width: $breakpoint-md) {
-         
+
         overflow: auto;
-       
+
     }
-    
+
 }
 
 
 .servico__item {
     text-align: center;
     padding: 0px 15px;
-    
+
     @media (min-width: $breakpoint-md) {
-            
-        float: left;        
+
+        float: left;
         width: 33.333%;
-       
+
     }
 }
 
 .servicos__texto {
-    color:$cor-leitura;
+    color: $cor-leitura;
     line-height: 21px;
 }
 
+.titulo__servicos {
+    font-weight: bold;
+    font-weight: 900;
+
+}
